# torch-mlir

./: CMakeLists.txt
build_tools/: build_libtorch.sh
build_tools/python_deploy/: build_linux_packages.sh
docs/: development.md
python/torch_mlir/dialects/torch/importer/jit_ir/: CMakeLists.txt
python/torch_mlir/dialects/torch/importer/jit_ir/cmake/modules/: pytorch.cmake
python/torch_mlir/dialects/torch/importer/jit_ir/csrc/: CMakeLists.txt
python/torch_mlir/eager_mode/: CMakeLists.txt
